代码初始化，并修改 roadhogrc 配置使其支持 css modules

--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,6 +1,6 @@
 {
   "entry": "src/index.js",
-  "disableCSSModules": true,
+  "disableCSSModules": false,
   "less": true,
   "publicPath": "/",
   "autoprefixer": null,
