--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "babel-runtime": "^6.9.2",
     "dva": "^1.1.0",
+    "keymaster": "^1.6.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
